--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,15 @@ body {
 
 /* gradient */
 .gradient {
-  background: linear-gradient(135deg, #df26c8, #fa4fa1);
+  /* background: linear-gradient(135deg, #df26c8, #fa4fa1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
+
+  font-weight: bold;
+  background: linear-gradient(90deg, #ff00ff, #ff0080);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  display: inline-block;
 }
 
 /* About */
