--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 .about__heading {
   text-align: center;
